--- a/src/ui/invoice-action/invoice-action.module.scss
+++ b/src/ui/invoice-action/invoice-action.module.scss
@@ -15,10 +15,9 @@
     &__title{
         @include heading-ml;
         margin-top: 1.625rem;
-        margin-left: 1.5rem;
 
         @include mid{
-            margin-left: 3.5rem;
+            margin-top: 0;
         }
     }
 
@@ -34,16 +33,19 @@
     }
 }
 
-.fieldset{
-    margin-top: 1.375rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.scroll{
     padding: 0 1.5rem;
 
     @include mid{
         padding: 0 3.5rem;
     }
+}
+
+.fieldset{
+    margin-top: 1.375rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
     &__items{
         margin-top: 4.25rem;
@@ -356,8 +358,8 @@
 
     @include mid{
         background-color: inherit;
-        border-radius: 0 0 1.25rem 0;
-        padding:  0 3.5rem 2rem 3.5rem;
+        border-radius: 0 1.25rem 1.25rem 0;
+        padding:  2rem 3.5rem;
         column-gap: 0.5rem;
         justify-content: flex-end;
         margin-top: 3rem;
